--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@
 }
 
 .about-us-Backg{
-    background-image: url(images/about-us-bg.png);
+    background-image: url(images2/industry-lanes-building-architectus_1.jpg);
     background-position: center right;
     background-repeat: no-repeat;
     background-size: 35% auto;
@@ -205,7 +205,7 @@
     background: white;
 }
 .service-part-one-backg{
-    background-image: url('images/woman-yellow-rubber-glove-cleaning-stove-kitchen-banner-photo.jpg');
+    background-image: url('images2/WilderBuildingSummerSolstice.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -458,3 +458,35 @@ button:hover {
         background-color: rgba(0, 0, 0, 0.6);
     }
     /* recent-work-bg CSS end */
+
+    /* propeerties-card CSS start  */
+
+    .properties-img img {
+        
+        transition: .8s;
+    }
+    .properties-img {
+        overflow: hidden;
+        
+    }
+    img.card-img-top:hover {
+        transform: scale(1.5);
+    }
+
+      /* propeerties-card CSS end  */
+
+    .msment-title-top {
+        justify-content: center;
+        display: flex;
+        /* font-size: 40px; */
+    }
+    .msment-title-btom {
+        justify-content: center;
+        display: flex;
+    }
+    .msment-title-parts:hover {
+        background-color: #FFD563 !important;
+        transition: all 0.5s ease !important;
+        color: black !important;
+        
+    }
