--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@
 
 
 .why-choose-background{
-    background-image: url(images/8040815.png);
+    background-image: url(images2/appartment-1.jpg);
     background-position: center;
     background-size: contain;
     background-repeat: repeat;
@@ -160,7 +160,7 @@
 
 .w-ch-backg-color {
     
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 0.8);
 }
     
 
@@ -358,7 +358,7 @@
 }
 
 .contact-us-part-one-backg{
-    background-image: url('images/woman-cleaning-counter-banner-photo-home-kitchen-hand-rubber-glove-with-spray-bottle-dish-cloth.jpg');
+    background-image: url('images2/reception-desk-for-office.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
