--- a/style.css
+++ b/style.css
@@ -492,3 +492,20 @@
     }
 
 
+    /* Offers-card CSS start  */
+
+    .offers-img img {
+        
+        transition: .8s;
+    }
+    .offers-img {
+        overflow: hidden;
+        
+    }
+    img.card-img-top:hover {
+        transform: scale(1.5);
+    }
+
+      /* Offers-card CSS end  */
+
+
