--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@
 
 }
 .our-service-backg{
-    background: url(images/professional-cleaning-service-person-cleaning-office.jpg);
+    background: url(images2/business-bg-_2.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover ;
