--- a/style.css
+++ b/style.css
@@ -5,6 +5,127 @@
     font-family: "Poppins", Sans-serif;
 }
 
+/* Navbar */
+.navbar{
+    background-color: #fff;
+    height: 90px;
+    padding: 0.5rem;
+}
+
+/* logo */
+.navbar-brand{
+    width: 100px;
+    height: auto;
+    font-weight: 700;
+    color: #009970;
+    font-size: 24px;
+    transition: 0.3s color;
+
+}
+
+/* login button */
+.login-button{
+    background-color: #009970;
+    color: #fff;
+    font-size: 14px;
+    padding: 8px 20px;
+    border-radius: 50px;
+    text-decoration: none;
+    transition: 0.3s background-color;
+}
+.login-button:hover{
+    background-color: #00b383;
+}
+
+/* Navbar Button */
+.navbar-toggler{
+    border: none;
+    font-size: 1.25rem;
+}
+.navbar-toggler:focus, .btn-close:focus {
+    box-shadow: none;
+    outline: none;
+}
+
+/* Navbar Menu */
+.nav-link{
+    color: #666777;
+    font-weight: 600;
+    position: relative;
+}
+.nav-link:hover{
+color: green !important;
+}
+
+.nav-link.active{
+    color: red !important;
+}
+
+@media (min-width:991px){
+.nav-link::before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width:0;
+    height: 2px;
+    background-color: #009970;
+    visibility: hidden;
+    transition: 0.3s ease-in-out;
+
+}
+.nav-link:hover::before {
+    width: 100%;
+    visibility: visible;
+}
+}
+/* Navbar Menu End */
+
+
+/* 
+.dropdown-item:hover {
+    background-color: #FFD563;
+    color: red !important;
+    transition: all 0.5s ease;
+}
+.dropdown-item {
+    padding: 8px;
+    font-size: 15px;
+    
+} */
+/* 
+.navbar{
+    font-size: 13px;
+}
+
+.nav-backg-img{
+    background: url(images2/header-bg.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover ;
+    background-attachment: fixed;
+    
+} */
+
+
+
+/* menu */
+/* .link-menu{
+    color: black;
+    font-weight: 600;
+}
+
+.nav-item {
+    display: flex;
+    align-items: center;
+} */
+
+.margin-top-125{
+    margin-top: 125px;
+}
+
+
 .all-socail-logo {
     display: flex;
 }
@@ -51,15 +172,8 @@
 .contact-address a {
     color: white;
 }
-.link-menu{
-    color: black;
-    font-weight: 600;
-}
 
-.nav-item {
-    display: flex;
-    align-items: center;
-}
+
 .background-pic{
     
     background-image: url(images/card-2.jpg);
@@ -67,7 +181,10 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0px -210px;
+    margin-top: 90px;
 }
+
+
 .box-icon {
     justify-content: center;
     display: flex;
@@ -185,19 +302,7 @@
     top: -20px;
     left: 20px;
 }
-.nav-link:hover {
-    color: green !important;
-}
-.dropdown-item:hover {
-    background-color: #FFD563;
-    color: red !important;
-    transition: all 0.5s ease;
-}
-.dropdown-item {
-    padding: 8px;
-    font-size: 15px;
-    
-}
+
 .how-it-work-title,
 .three-step-part{
     text-align: center;
@@ -515,24 +620,47 @@
 
       /* Offers-card CSS end  */
 
-    .navbar{
+    
+    
+
+/* slider test  */
+
+    /* body {
+        background: #eee;
+        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-size: 14px;
+        color: #000;
+        margin: 0;
+        padding: 0;
+      } */
+  
+      .swiper {
+        width: 100%;
+        height: 300px;
+        margin: 20px auto;
+      }
+  
+      .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+  
+      .append-buttons {
+        text-align: center;
+        margin-top: 20px;
+      }
+  
+      .append-buttons a {
+        display: inline-block;
+        border: 1px solid #007aff;
+        color: #007aff;
+        text-decoration: none;
+        padding: 4px 10px;
+        border-radius: 4px;
+        margin: 0 10px;
         font-size: 13px;
-    }
-
-    .nav-backg-img{
-        background: url(images2/header-bg.jpg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size:cover ;
-        background-attachment: fixed;
-        
-    }
-
-    .margin-top-125{
-        margin-top: 125px;
-    }
-
-    .nav-backg-img img{
-        
-        max-width: 100%;
-    }
+      }
