--- a/css/responsive-css.css
+++ b/css/responsive-css.css
@@ -14,6 +14,14 @@
     .margin-mobile-bottom{
       margin-bottom: 10px;
     }
+
+    .owl-nav .owl-next{
+      right: 50px;
+  }
+  
+  .owl-nav .owl-prev{
+      left:50px;
+  }
    
   }
   
